Bug 443278 - Right clicking desktop icons on second monitor pops up menu on first monitor
Summary: Right clicking desktop icons on second monitor pops up menu on first monitor
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 5.22.4
Platform: Other Linux
: HI normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-10-04 04:14 UTC by redartofcode
Modified: 2021-10-04 17:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments
shows the right click bug (384.22 KB, video/mp4)
2021-10-04 04:14 UTC, redartofcode
Details

Note You need to log in before you can comment on or make changes to this bug.
Description redartofcode 2021-10-04 04:14:41 UTC
Created attachment 142130 [details]
shows the right click bug

SUMMARY
Right clicking desktop icons on second monitor pops up menu on first monitor

STEPS TO REPRODUCE
1. have some desktop folders/file icons visible on second monitor (right side)
2. right click on them
3. the right click menu pops up on the left monitor

OBSERVED RESULT
the right click popup menu is on left monitor and i have to bring my cursor to this monitor to interact with that menu.

EXPECTED RESULT
the right click popup menu should be where i click on the icons on right monitor

SOFTWARE/OS VERSIONS
Linux: kernel 5.10.66
(available in About System)
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
I uploaded a recording. the left monitor has the while/purple minimal wallpaper, while right side you can see second monitor with endeavour os wallpaper and desktop icons. I only recorded half of the first monitor which should be enough to describe the situation. 

This is not really important. but thought i should report it, so its atleast documented somewhere.
Comment 1 Bug Janitor Service 2021-10-04 08:49:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/583
Comment 2 Nate Graham 2021-10-04 17:14:24 UTC
Git commit 96067c0ff9b6487d9205a9439f41885dcbaa59e8 by Nate Graham, on behalf of David Redondo.
Committed on 04/10/2021 at 17:14.
Pushed by ngraham into branch 'master'.

Open context menu under the cursor again

QMenu::popup() takes a global position but we still want, the
new file position in local coordinates.
Tested both that the menu opens correctly and new files are created
at the correct position which triggered the introduction of setMenuPos.

M  +6    -7    containments/desktop/plugins/folder/foldermodel.cpp
M  +1    -1    containments/desktop/plugins/folder/foldermodel.h

https://invent.kde.org/plasma/plasma-desktop/commit/96067c0ff9b6487d9205a9439f41885dcbaa59e8
Comment 3 Nate Graham 2021-10-04 17:17:42 UTC
Git commit e36a72c2a2e5ecfdf7cfa3a114a717933521275c by Nate Graham, on behalf of David Redondo.
Committed on 04/10/2021 at 17:17.
Pushed by ngraham into branch 'Plasma/5.23'.

Open context menu under the cursor again

QMenu::popup() takes a global position but we still want, the
new file position in local coordinates.
Tested both that the menu opens correctly and new files are created
at the correct position which triggered the introduction of setMenuPos.


(cherry picked from commit 96067c0ff9b6487d9205a9439f41885dcbaa59e8)

M  +6    -7    containments/desktop/plugins/folder/foldermodel.cpp
M  +1    -1    containments/desktop/plugins/folder/foldermodel.h

https://invent.kde.org/plasma/plasma-desktop/commit/e36a72c2a2e5ecfdf7cfa3a114a717933521275c