Open context menu under the cursor again

QMenu::popup() takes a global position but we still want, the
new file position in local coordinates.
Tested both that the menu opens correctly and new files are created
at the correct position which triggered the introduction of setMenuPos.
BUG:443278